# anki_decks

./: README.md  pyproject.toml
decks/: ancient_egypt.apkg  etruscans.apkg  personality_psych.apkg  pycharm_mac.apkg  pycharm_windows.apkg  sublime.apkg  vscode_windows.apkg
decks/poetry/: poetry_carroll_jabberwocky.apkg  poetry_dickinson_because_i_could_not_stop_for_death.apkg  poetry_donne_devotions_upon_emergent_occasions.apkg  poetry_frost_stopping_by_woods_on_a_snowy_evening.apkg  poetry_frost_the_road_not_taken.apkg  poetry_longfellow_the_tide_rises_the_tide_falls.apkg  poetry_milton_sonnet_19.apkg  poetry_saxe_blind_men_and_the_elephant.apkg  poetry_shakespeare_all_the_world_s_a_stage.apkg  poetry_yeats_second_coming.apkg
decks/sblgnt/: ιακωβου.apkg  προς_γαλατας.apkg  προς_φιλημονα.apkg
src/anki_decks/: ancient_egypt.py  build_poetry.py  build_sblgnt.py  etruscans.py  personality_psych.py  pycharm_mac.py  pycharm_windows.py  sublime.py  vscode_windows.py
src/anki_decks/data/: personality_psych_data.csv  poetry.csv  sblgnt.csv
src/anki_decks/hotkeys/: build_hotkey_deck.py  pycharm_mac_data.py  pycharm_windows_data.py  sublime_data.py  vscode_windows_data.py
src/anki_decks/utils/: clean.py  decks.py  parse_table.py  parse_tsv.py
